# gamescope-idle

./: .editorconfig  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
data/: config.example.toml  gamescope-idle.service
packaging/: PKGBUILD
src/: cec.rs  config.rs  control.rs  daemon.rs  hid.rs  inhibit.rs  input.rs  main.rs  overlay.rs  overlay_x11.rs  screensaver.rs
